# my_project

./: .flake8  README.md  pyproject.toml
src/: mask.py  processing.py  widget.py
src/processing/: processing.py
